<resources>
    <string name="setting_resolution_180P">180P</string>
    <string name="setting_resolution_240P">240P</string>
    <string name="setting_resolution_360P">360P</string>
    <string name="setting_resolution_480P">480P</string>
    <string name="setting_resolution_540P">540P</string>
    <string name="setting_resolution_720P">720P</string>
    <string name="setting_resolution_1080P">1080P</string>
    <string name="setting_audio_480">48KHz</string>
    <string name="setting_audio_441">44.1KHz</string>
    <string name="setting_audio_320">32KHz</string>
    <string name="setting_audio_aac_lc">LC</string>
    <string name="setting_audio_aac_he">HE-AAC</string>
    <string name="setting_audio_aac_hev2">HEv2-AAC</string>
    <string name="setting_audio_aac_ld">AAC-LD</string>
    <string name="music_mode">Music Mode</string>
    <string name="app_name">AlivcLive</string>
    <string name="license_declaration">License declaration</string>
    <string name="license_declaration_text">© 2017 Copyright by Alibaba Cloud All rights reserved</string>
    <string name="resolution_label">Resolution</string>
    <string name="target_bitrate">Target bitrate</string>
    <string name="target_rate_value">1200</string>
    <string name="min_bitrate">Min bitrate</string>
    <string name="min_rate_value">300</string>
    <string name="initial_bitrate">Initial bitrate</string>
    <string name="audio_bitrate">Audio bitrate</string>
    <string name="initial_bit_value">1000</string>
    <string name="audio_bitrate_value">64</string>
    <string name="captrue_fps">Captrue fps</string>
    <string name="init_fps">20</string>
    <string name="audio_sampling_rate">Audio sampling rate</string>
    <string name="audio_profile">Audio profile</string>
    <string name="sound_track">Sound track</string>
    <string name="single_track">Single track</string>
    <string name="dual_track">Dual track</string>
    <string name="video_encoder">Video Encoder</string>
    <string name="h264">H264</string>
    <string name="h265">H265</string>
    <string name="b_frames">B Frames</string>
    <string name="quality_resolution_first">High quality priority</string>
    <string name="quality_fluency_first">fluency priority</string>
    <string name="quality_custom">custom</string>
    <string name="reconnect_duration">Reconnection duration</string>
    <string name="reconnect_times">Reconnection times</string>
    <string name="landscape_model">Orientation</string>
    <string name="portrait">Portrait</string>
    <string name="homeLeft">HomeLeft</string>
    <string name="homeRight">HomeRight</string>
    <string name="front_camera">Front camera</string>
    <string name="setting_pre_mirror">Preview mirror</string>
    <string name="setting_push_mirror">Push mirror</string>
    <string name="narrowband_hd">Narrowband HD</string>
    <string name="display_mode">DisplayMode</string>
    <string name="display_mode_full">scaleToFill</string>
    <string name="display_mode_fit">aspectFit</string>
    <string name="display_mode_cut">aspectFill</string>
    <string name="watermark">Watermark</string>
    <string name="watermark_open">Watermark</string>
    <string name="watermark_setting">Setting</string>
    <string name="audio_only_push_streaming">Audio only</string>
    <string name="video_only_push_streaming">Video only</string>
    <string name="video_push_streaming">Default</string>
    <string name="bitrate_control">Bitrate Control</string>
    <string name="extern_stream_main">Main Extern Stream</string>
    <string name="pause_image">Pause Image</string>
    <string name="network_image">NetworkPoor Image</string>
    <string name="variable_resolution">Variable Resolution</string>
    <string name="auto_focus">Auto focus</string>
    <string name="beauty_enable">Beauty</string>
    <string name="animoji_enable">Animoji</string>
    <string name="hardware_encode">Hardware encode</string>
    <string name="software_encode">Software encode</string>
    <string name="audio_hardware_encode">Audio Hardware enc</string>
    <string name="asynchronous_interface">Asynchronous interface</string>
    <string name="start_button">Start pushing</string>
    <string name="start_preview_button">Start preview</string>
    <string name="stop_preview_button">Stop preview</string>
    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>
    <string name="stop_button">Stop pushing</string>
    <string name="more_setting_button">More setting</string>
    <string name="repush_button">Restart pushing</string>
    <string name="slide_right_view_log_char">Slide right to view log chart</string>
    <string name="slide_left_view_log">Slide left to view log</string>
    <string name="share_button">Share</string>
    <string name="dy_add_button">DynamicAdd</string>
    <string name="dy_remove_button">DynamicRemove</string>
    <string name="beauty_on">Beauty on</string>
    <string name="beauty_off">Beauty off</string>
    <string name="beauty_white">Whitening</string>
    <string name="beauty_skin_smooth">Smooth skin</string>
    <string name="beauty_ruddy">Ruddy</string>
    <string name="beauty_cheekpink">CheekPink</string>
    <string name="beauty_thinface">SlimFace</string>
    <string name="beauty_shortenface">ShortenFace</string>
    <string name="beauty_bigeye">BigEye</string>
    <string name="capture">Capture</string>
    <string name="render">Render</string>
    <string name="encode">Encode</string>
    <string name="push">Push</string>
    <string name="local_log">Local log</string>
    <string name="mic_volume">Mic Volume</string>
    <string name="audio_fps">Audio fps</string>
    <string name="video_fps">Video fps</string>
    <string name="bitrate">Bitrate</string>
    <string name="video_encode">Video encode</string>
    <string name="audio_encode">Audio encode</string>
    <string name="buffer">Buffer</string>
    <string name="video_renderbuffer">Video render</string>
    <string name="video_encodebuffer">Video encode</string>
    <string name="video_uploadbuffer">Video upload</string>
    <string name="audio_encodebuffer">Audio encode</string>
    <string name="audio_uploadbuffer">Audio upload</string>
    <string name="start_preview">Start preview</string>
    <string name="stop_preview">Stop preview</string>
    <string name="start_push">Start pushing</string>
    <string name="stop_push">Stop pushing</string>
    <string name="pause_push">Pause</string>
    <string name="resume_push">Resume</string>
    <string name="GOP">Gop</string>
    <string name="push_url">Push url</string>
    <string name="ispushing">Pushing</string>
    <string name="publisher_log">pusher log：</string>
    <string name="no_camera_permission">Camera usage is not permitted, please open first</string>
    <string name="no_record_bluetooth_permission">Bluetooth is not permitted to record, please open first</string>
    <string name="no_record_audio_permission">Audio is not permitted to record, please open first</string>
    <string name="no_read_phone_state_permission">Phone state is not permitted to read, please opend first</string>
    <string name="no_write_external_storage_permission">External storage is not permitted to write, please open first</string>
    <string name="no_read_external_storage_permission">External storage is not permitted to read, please open first</string>
    <string name="no_read_bluetooth_connect_permission">Bluetooth connect is not permitted to read, please open first</string>
    <string name="no_internet_permission">Internet is not permitted to push, please open first</string>
    <string name="dialog_title">Error tips</string>
    <string name="ok">OK</string>
    <string name="reconnect">Reconnect</string>
    <string name="network_poor">The network is unstable, please quit or try again</string>
    <string name="network_recovery">The network has recovered</string>
    <string name="reconnect_start">Start reconnecting</string>
    <string name="reconnect_fail">Reconnection failed</string>
    <string name="connect_fail">Connection failed</string>
    <string name="send_message">Send Message</string>
    <string name="reconnect_success">Reconnection succeed</string>
    <string name="senddata_timeout">Sending data timeout</string>
    <string name="restart_success">Restart successfully</string>
    <string name="bgm_open_failed">BGM File open Failed</string>
    <string name="system_error">System error:</string>
    <string name="sdk_error">SDK error：</string>
    <string name="bite_error">Bitrate setting error</string>
    <string name="url_empty">Please enter url</string>
    <string name="min_fps">Min fps</string>
    <string name="no_music">No Music</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="close_loop">Close Loop</string>
    <string name="open_loop">Open Loop</string>
    <string name="close_mute">Close Mute</string>
    <string name="open_mute">Open Mute</string>
    <string name="close_ears_back">Close Ears</string>
    <string name="open_ears_back">Open Ears</string>
    <string name="close_audio_denoise">Close Denoise</string>
    <string name="open_audio_denoise">Open Denoise</string>
    <string name="accompaniment">Accompaniment</string>
    <string name="voice">Voice</string>
    <string name="internet_music">Internet music</string>
    <string name="screen_tool">Screen tool</string>
    <string name="back">back</string>
    <string name="privacy_on">Privacy</string>
    <string name="privacy_off">Privacy Off</string>
    <string name="camera_on">Camera</string>
    <string name="camera_off">Camera Off</string>
    <string name="mix_on">Mix</string>
    <string name="mix_off">Mix Off</string>
    <string name="mic_on">Mic</string>
    <string name="mic_off">Mic Off</string>
    <string name="screen_note">You can start other applications and start live...</string>
    <string name="screen_note1">The screen function has stopped.</string>
    <string name="answer">Answer</string>
    <string name="auth_text">Auth Time</string>
    <string name="privacy_text">Privacy Key</string>
    <string name="add_dynamic_failed">Add dynamic failed, id=</string>
    <string name="pull_common_enter_name_tv">Stream Ingest for Screen Recording</string>
    <string name="push_enter_name_tv">Stream Ingest for Camera</string>
    <string name="push_local_video_name_tv">Stream Ingest for Video</string>
    <string name="pull_rtc_enter_name_tv">Live Streaming</string>
    <string name="view_string_hint_pull_url">Enter the source URL.</string>
    <string name="view_string_hint_push_url">Enter the ingest URL.</string>
    <string name="btn_confirm">Confirm</string>
    <string name="resolution_label_desc">To enable the system to automatically switch to the most suitable resolution, you must enable adaptive bitrate streaming. For more information, see the API reference.</string>
    <string name="advance_config">Advanced Settings</string>
    <string name="wating_push">Waiting for Stream Ingest...</string>
    <string name="data_args">Data Metrics</string>
    <string name="beauty">Retouching</string>
    <string name="animoji">Animoji</string>
    <string name="backgroud_music">Background Music</string>
    <string name="flash">Flash</string>
    <string name="camera">Camera</string>
    <string name="snapshot">Snapshot</string>
    <string name="sound_effect_title">Sound Effect</string>
    <string name="pull_rts_enter_name">Rts Live Streaming</string>
    <string name="pull_rts_url_title">URL</string>
    <string name="pull_rts_input_hint">Please enter RTS ultra-low delay playback address</string>
    <string name="pull_rts_url_generate_tip">The playback address can be generated by the address generator in the live video console</string>
    <string name="pull_rts_start_play">Start playing</string>
</resources>