<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_window_layout"
    android:layout_width="wrap_content"
    android:layout_height="64dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:alpha="0.5"
    android:background="@drawable/shap_oval_gray">
    <LinearLayout
        android:id="@+id/recording_linear"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_blue_back"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="19dp"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="15sp"
            android:textColor="@color/colourful_text_strong"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/opera_linear"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacy"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/privacy_on"
            android:textSize="10sp"
            android:drawablePadding="5dp"
            android:layout_marginEnd="20dp"
            android:drawableTop="@drawable/selector_push_drawable_privacy"
            android:textColor="@drawable/selector_push_text_color"/>
        <TextView
            android:id="@+id/camera"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/camera_on"
            android:textSize="10sp"
            android:drawablePadding="8dp"
            android:layout_marginEnd="20dp"
            android:drawableTop="@drawable/selector_push_drawable_camera"
            android:textColor="@drawable/selector_push_text_color"/>
        <TextView
            android:id="@+id/mix"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/mix_on"
            android:textSize="10sp"
            android:drawablePadding="5dp"
            android:layout_marginEnd="20dp"
            android:drawableTop="@drawable/selector_push_drawable_mix"
            android:textColor="@drawable/selector_push_text_color"/>
        <TextView
            android:id="@+id/mic"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/mic_on"
            android:textSize="10sp"
            android:drawablePadding="1dp"
            android:layout_marginEnd="20dp"
            android:drawableTop="@drawable/selector_push_drawable_mic"
            android:textColor="@drawable/selector_push_text_color"/>

    </LinearLayout>
</LinearLayout>